--- a/MZcms.Entity/Entities.Context.tt
+++ b/MZcms.Entity/Entities.Context.tt
@@ -43,6 +43,7 @@ namespace <#=code.EscapeNamespace(codeNamespace)#>
 using System;
 using System.Data.Entity;
 using System.Data.Entity.Infrastructure;
+using MZcms.Model;
 <#
 if (container.FunctionImports.Any())
 {
@@ -311,7 +312,7 @@ public class CodeStringGenerator
             "{0} virtual DbSet<{1}> {2} {{ get; set; }}",
             Accessibility.ForReadOnlyProperty(entitySet),
             _typeMapper.GetTypeName(entitySet.ElementType),
-            _code.Escape(entitySet));
+            _typeMapper.GetTypeName(entitySet.ElementType));
     }
 
     public string DbSetInitializer(EntitySet entitySet)
